# non-llm_chatbot

non_llm_chat/: CHATBOT_README.md  README.md  app.yaml  databricks.yml  defaultbot_db.sqlite3  demo.py  pyproject.toml  requirements.txt  requirements_minimal.txt
non_llm_chat/resources/: non_llm_chat.job.yml
non_llm_chat/src/: chat.py  chat_cli.py  chat_fastapi.py  chat_fixed.py  chat_flask.py  chat_streamlit.py  chatbot.db  chatbot.db-shm  chatbot.db-wal  chatbot_demo.py  flask_test.py  simple_chatbot.db  specialized_bot.db  test_chatbot.py
non_llm_chat/src/non_llm_chat/: SimpleChatbot.py  __init__.py  chatbot.py  chatbot_utils.py  enhanced_chatbot.py  flask_app.py  main.py
non_llm_chat/src/templates/: chat.html
