[project]
name = "non_llm_chat"
version = "0.0.1"
authors = [{ name = "alan.dennis@ucumberlands.edu" }]
requires-python = ">= 3.11"
dependencies = [
    "Flask>=2.0.0,<3.0.0",
    "Werkzeug>=2.0.0,<3.0.0",
    "ChatterBot>=1.0.0",
    "chatterbot-corpus>=1.2.0",
    "SQLAlchemy>=1.4.0,<2.0.0",
    "PyYAML>=5.4.0",
    "python-dateutil>=2.8.0",
    "pytz>=2021.1"
]

[project.optional-dependencies]
dev = [
    "pytest",

    # Code completion support for Lakeflow Declarative Pipelines, also install databricks-connect
    "databricks-dlt",

    # databricks-connect can be used to run parts of this project locally.
    # See https://docs.databricks.com/dev-tools/databricks-connect.html.
    #
    # Note, databricks-connect is automatically installed if you're using Databricks
    # extension for Visual Studio Code
    # (https://docs.databricks.com/dev-tools/vscode-ext/dev-tasks/databricks-connect.html).
    #
    # To manually install databricks-connect, uncomment the line below to install a version
    # of db-connect that corresponds to the Databricks Runtime version used for this project.
    # See https://docs.databricks.com/dev-tools/databricks-connect.html
    # "databricks-connect>=15.4,<15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/non_llm_chat"]

[project.scripts]
main = "non_llm_chat.main:main"
databricks-main = "non_llm_chat.main:databricks_main"
